--- a/styles/scss/_global.scss
+++ b/styles/scss/_global.scss
@@ -6,73 +6,14 @@
 
 body{
   font-family: "Josefin Sans", sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @extend %d-flex;
+  @extend %align-center;
+  @extend %justify-center;
   min-height: 100vh;
-}
-
-main{
-  min-width: 320px;
-  max-width: 375px;
-  max-height: 800px;
-}
-
-picture img{
-  display: block;;
-}
-
-.logo-ctn{
-  max-width: 100%;
-  padding: 30px 0 30px 37px;
-}
-
-section{
-  text-align: center;
-}
-
-label{
-  margin: auto;
-  align-self: stretch;
-  height: 50px;
-  padding-left: 24px;
-  width: 316px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  border-radius: 30px;
-  border: 1px solid rgba(206, 151, 151, 0.40);
-  position: relative;
-
-  &::after{
-    content: "Please provide a valid email";
-    position: absolute;
-    top: 125%;
-    left: 15%;
-  }
-}
-input[type="email"]{
-  border: unset;
-  height: 70%;
-}
-
-.submit-btn{
-  display: flex;
-  width: 64px;
-  height: 50px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  flex-shrink: 0;
-  border: unset;
-  border-radius: 30px;
-  background: linear-gradient(135deg, #F8BFBF 22.77%, #EE8C8C 86.43%);
-  box-shadow: 0px 10px 30px 0px rgba(249, 98, 98, 0.40);
-
-  &:hover{
-    border-radius: 30px;
-    background: #F9D1D2;
-    box-shadow: 0px 10px 30px 0px rgba(206, 151, 151, 0.80);
+  font-size: 16px;
+  background: linear-gradient(135deg, $gradient-1);
+  @include respond-to(small){
+    align-items: baseline;
+    overflow-x: clip;
   }
 }
